# supreme-fiesta

./: README.md  pyproject.toml  task.md
config/: config.toml
scripts/: bootstrap.sh  start_build_linux.sh  start_build_macos.sh  start_desktop.sh
tests/: test_asr_engines.py  test_benchmarks.py  test_cli.py  test_config_manager.py  test_hf_assets.py  test_llm_llama_cpp.py  test_logging.py  test_silero_vad.py  test_smart_turn.py  test_tts_inventory.py
voice_agent/: __init__.py  __main__.py
voice_agent/asr/: __init__.py  base.py  factory.py  faster_whisper.py  mlx_whisper.py  utils.py
voice_agent/audio/: __init__.py  io.py
voice_agent/benchmarks/: __init__.py
voice_agent/cli/: __init__.py  app.py  visualizer.py
voice_agent/config/: __init__.py  default_config.toml  manager.py  models.py
voice_agent/llm/: __init__.py  base.py  gguf_metadata.py  hf_assets.py  llama_cpp.py
voice_agent/logging/: __init__.py
voice_agent/models/: __init__.py  registry.py
voice_agent/runtime/: __init__.py  smart_turn.py
voice_agent/telemetry/: __init__.py
voice_agent/tts/: __init__.py  kitten.py
voice_agent/vad/: __init__.py  base.py  silero.py
